--- a/app/app.html
+++ b/app/app.html
@@ -5,6 +5,10 @@
         <title>Electron Boilerplate</title>
 
         <script>
+        var Module = require('module');
+        var path = require('path');
+        Module.globalPaths.push( path.join(__dirname, 'node_modules') );
+        Module.globalPaths.push( path.join(__dirname, '..', 'node_modules') );
         function define() {
 
         }
