--- a/app/login.html
+++ b/app/login.html
@@ -117,6 +117,26 @@
         </div>
 		<script>
 
+
+            var qs = (function(a) {
+                if (a == "") return {};
+                var b = {};
+                for (var i = 0; i < a.length; ++i)
+                {
+                    var p=a[i].split('=', 2);
+                    if (p.length == 1)
+                        b[p[0]] = "";
+                    else
+                        b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+                }
+                return b;
+            })(window.location.search.substr(1).split('&'));
+
+            if(qs['signout'] == 'true') {
+                window.localStorage.removeItem('githubAccessToken');
+            }
+
+
             var ipc = require('electron').ipcRenderer
 
             $('#githubLogin').click(function() {
@@ -175,20 +195,6 @@
         			}
         		});
         	}
-
-            var qs = (function(a) {
-                if (a == "") return {};
-                var b = {};
-                for (var i = 0; i < a.length; ++i)
-                {
-                    var p=a[i].split('=', 2);
-                    if (p.length == 1)
-                        b[p[0]] = "";
-                    else
-                        b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
-                }
-                return b;
-            })(window.location.search.substr(1).split('&'));
 
             // If a token was set in the Query String
             if(qs['access_token']) {
