--- a/app/noemail.html
+++ b/app/noemail.html
@@ -9,6 +9,8 @@
         <link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
         <link href="./stylesheets/font-awesome.css" rel="stylesheet" type="text/css">
 
+		<script src="vendor/jquery.min.js" type="text/javascript" onload="window.$ = window.jQuery = module.exports;"></script>
+
 		<style>
         body {
             background-color: #466674;
