--- a/app/noemail.html
+++ b/app/noemail.html
@@ -53,7 +53,7 @@
 					// TODO: Determine if it's a valid email
 
 					$(this).addClass('disabled');
-					window.location = 'http://launcher.opengine.io/addemail?access_token=' + access_token + '&email=' + email;
+					window.location = 'http://launcher.opengine.io/addemail?access_token=' + token + '&email=' + email;
 				});
 			});
 
