--- a/app/access.html
+++ b/app/access.html
@@ -97,7 +97,7 @@
                         	u.orgRepos('TeamOPifex', function(err, results) {
                         		for(var i = 0; i < results.length; i++) {
                         			if(results[i].id == 27466078) {
-                        				cb && cb(true):
+                        				cb && cb(true);
                         				break;
                         			}
                         		}
