--- a/app/access.html
+++ b/app/access.html
@@ -30,6 +30,11 @@
 		</div>
 		<script type="text/javascript">
 
+    var Module = require('module');
+    var path = require('path');
+    Module.globalPaths.push( path.join(__dirname, 'node_modules') );
+    Module.globalPaths.push( path.join(__dirname, '..', 'node_modules') );
+    Module.globalPaths.push( path.join(__dirname, '..', '..', '..', 'app.asar', 'node_modules') );
 
 	        function define() {
 
