Support for building iOS projects

--- a/app/app.html
+++ b/app/app.html
@@ -61,6 +61,7 @@
         <script src="js/app/directives/onRightClick.js"></script>
         <script src="js/app/directives/codeEditor.js"></script>
 
+        <script src="js/app/factories/ios.js"></script>
         <script src="js/app/factories/cmake.js"></script>
         <script src="js/app/factories/config.js"></script>
         <script src="js/app/factories/console.js"></script>
