Extra node-module path

--- a/app/access.html
+++ b/app/access.html
@@ -36,6 +36,7 @@
     Module.globalPaths.push( path.join(__dirname, '..', 'node_modules') );
     Module.globalPaths.push( path.join(__dirname, '..', '..', '..', 'app.asar', 'node_modules') );
     // For DEBUG
+    Module.globalPaths.push( path.join(__dirname, '..', '..', '..', '..', '..', '..', 'build', 'node_modules') );
     Module.globalPaths.push( path.join(__dirname, '..', '..', '..', '..', '..', '..', '..', 'build', 'node_modules') );
 
 	        function define() {
