Some intense refactoring. Still way more to do.

--- a/app/app.html
+++ b/app/app.html
@@ -74,6 +74,10 @@
         <script src="js/app/factories/run.js"></script>
         <script src="js/app/factories/user.js"></script>
         <script src="js/app/factories/CodeEditor.js"></script>
+        <script src="js/app/factories/project.js"></script>
+        <script src="js/app/factories/os.js"></script>
+        <script src="js/app/factories/visualStudio.js"></script>
+        <script src="js/app/factories/system.js"></script>
 
         <script src="js/app/controllers/engineController.js"></script>
         <script src="js/app/controllers/engineDetailController.js"></script>
