--- a/app/app.html
+++ b/app/app.html
@@ -79,6 +79,7 @@
         <script src="js/app/factories/visualStudio.js"></script>
         <script src="js/app/factories/system.js"></script>
         <script src="js/app/factories/terminal.js"></script>
+        <script src="js/app/factories/engine.js"></script>
 
         <script src="js/app/controllers/engineController.js"></script>
         <script src="js/app/controllers/engineDetailController.js"></script>
