Lots of improvements to the login window. Now uses the OPengine Authentication. Some refactoring through out

--- a/app/app.html
+++ b/app/app.html
@@ -54,42 +54,7 @@
 
 
         <script src="js/engine.js"></script>
-        <script src="js/app/routes.js"></script>
-
-        <script src="js/app/directives/onEnter.js"></script>
-        <script src="js/app/directives/onEscape.js"></script>
-        <script src="js/app/directives/onRightClick.js"></script>
-        <script src="js/app/directives/codeEditor.js"></script>
-
-        <script src="js/app/factories/ios.js"></script>
-        <script src="js/app/factories/cmake.js"></script>
-        <script src="js/app/factories/config.js"></script>
-        <script src="js/app/factories/console.js"></script>
-        <script src="js/app/factories/engineReleases.js"></script>
-        <script src="js/app/factories/engines.js"></script>
-        <script src="js/app/factories/git.js"></script>
-        <script src="js/app/factories/make.js"></script>
-        <script src="js/app/factories/marketplace.js"></script>
-        <script src="js/app/factories/projects.js"></script>
-        <script src="js/app/factories/run.js"></script>
-        <script src="js/app/factories/user.js"></script>
-        <script src="js/app/factories/CodeEditor.js"></script>
-        <script src="js/app/factories/project.js"></script>
-        <script src="js/app/factories/os.js"></script>
-        <script src="js/app/factories/visualStudio.js"></script>
-        <script src="js/app/factories/system.js"></script>
-        <script src="js/app/factories/terminal.js"></script>
-        <script src="js/app/factories/engine.js"></script>
-
-        <script src="js/app/controllers/engineController.js"></script>
-        <script src="js/app/controllers/engineDetailController.js"></script>
-        <script src="js/app/controllers/projectDetailController.js"></script>
-        <script src="js/app/controllers/projectSettingsController.js"></script>
-        <script src="js/app/controllers/libraryController.js"></script>
-        <script src="js/app/controllers/loginController.js"></script>
-        <script src="js/app/controllers/settingsController.js"></script>
-        <script src="js/app/controllers/toolsController.js"></script>
-        <script src="js/app/controllers/resourcePackController.js"></script>
+        <script src="appBundle.js"></script>
 
         <script src="vendor/splitter.js"></script>
 
