--- a/app/install.html
+++ b/app/install.html
@@ -203,12 +203,14 @@
             console.log(installed);
             for(var i = 0; i < installed.length; i++) {
               if(installed[i].installed) {
-                $('#install-table').append($('<tr> <td width="25" style="padding: 0px; padding-top: 5px;padding-bottom: 0px;"><span class="fa fa-check-circle" style=" font-size: 20px; line-height: 1.5; color: #fff;"> </span></td>  <td class="text-left" style="padding-bottom: 0px;"> <span style="font-size: 22px;">' + installed[i].program.name + '</span> </td> <td width="90" style="padding-right: 0px;padding-bottom: 0px;"> Installed</td> </tr><tr><td style="border: 0;padding-top: 0px;"></td><td colspan="2" style="border: 0; padding-top: 0px; text-align: left"><div style="font-size:12px">' + installed[i].program.desc + '</div></td></tr>'))
+                $('#install-table').append($('<tr> <td width="25" style="padding: 0px; padding-top: 5px;padding-bottom: 0px;"><span class="fa fa-check-circle" style=" font-size: 20px; line-height: 1.5; color: #fff;"> </span></td>  <td class="text-left" style="padding-bottom: 0px;"> <span style="font-size: 22px;">' + installed[i].program.name + '</span> </td> <td width="90" style="padding-right: 0px;padding-bottom: 0px;">' + installed[i].version + '</td> </tr><tr><td style="border: 0;padding-top: 0px;"></td><td colspan="2" style="border: 0; padding-top: 0px; text-align: left"><div style="font-size:12px">' + installed[i].program.desc + '</div></td></tr>'))
               } else {
                 var btnDropDown = '<div class="btn-group"><button type="button" class="btn btn-primary">Install</button>  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">    <span class="caret"></span>    <span class="sr-only">Toggle Dropdown</span>  </button><ul class="dropdown-menu"><li><a href="#">Install</a></li><li><a href="#">Set .exe location</a></li></ul></div>';
                 $('#install-table').append($('<tr> <td width="25" style="padding: 0px; padding-top: 5px; padding-bottom: 0px;"><span class="fa fa-circle" style=" font-size: 20px; line-height: 1.5; color: #fff;"> </span></td>  <td class="text-left" style="padding-bottom: 0px;"> <span style="font-size: 22px;">' + installed[i].program.name + '</span> </td> <td width="90" style="padding-right: 0px;padding-bottom: 0px;"> ' + btnDropDown + ' </td> </tr><tr><td style="border: 0;padding-top: 0px;"></td><td colspan="2" style="border: 0; padding-top: 0px; text-align: left"><div style="font-size:12px">' + installed[i].program.desc + '</div></td></tr>'))
               }
             }
+
+            //ipc.send('install-cmake');
         </script>
     </body>
 </html>
