--- a/app/install.html
+++ b/app/install.html
@@ -210,7 +210,7 @@
               }
             }
 
-            //ipc.send('install-cmake');
+            ipc.send('install-cmake');
         </script>
     </body>
 </html>
